--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,11 @@ tr:nth-child(n + 2):nth-child(-n + 2) :nth-child(13) {
 tr:nth-child(n + 5):nth-child(-n + 7) :nth-child(14) {
   background-color: #ffc0cd;
 }
+/* Be - Ra */
 tr:nth-child(n + 3):nth-child(-n + 7) :nth-child(13) {
   background-color: #ffc0cd;
+}
+/* Li - Fr */
+tr:nth-child(n + 2):nth-child(-n + 7) :nth-child(1) {
+  background-color: #8080b1;
 }
