--- a/css/style.css
+++ b/css/style.css
@@ -97,3 +97,7 @@ tr:nth-child(n + 2):nth-child(-n + 7) :nth-child(1) {
 tr:nth-child(n + 2):nth-child(-n + 7) :nth-child(2) {
   background-color: #e5cf9f;
 }
+/* Sc - Zn   Y-Cd*/
+tr:nth-child(n + 4):nth-child(-n + 5) {
+  background-color: #3d9f4e;
+}
