--- a/css/style.css
+++ b/css/style.css
@@ -29,11 +29,11 @@ tr:nth-child(8) :nth-child(n + 2):nth-child(-n + 15) {
 }
 /* Hydrogen */
 tr:first-child td:first-child {
-  background-color: yellow;
+  background-color: rgba(243, 255, 61, 255);
 }
 /* He -Rn */
 tr:nth-child(n + 1):nth-child(-n + 6) :last-child {
-  background-color: #da8bd3;
+  background-color: rgba(218, 139, 211, 255);
 }
 /* Uuo */
 tr:nth-child(7):nth-child(7) :last-child {
@@ -46,15 +46,15 @@ tr:nth-child(7):nth-child(7) :nth-child(15) {
 }
 /* Uss*/
 tr:nth-child(7):nth-child(7) :nth-child(17) {
-  background-color: #8080b1;
+  background-color: rgba(128, 128, 177, 255);
 }
 /* Lv */
 tr:nth-child(n):nth-child(7) :nth-child(16) {
-  background-color: #da8bd3;
+  background-color: rgba(218, 139, 211, 255);
 }
 /* O-Se */
 tr:nth-child(n + 2):nth-child(-n + 4) :nth-child(16) {
-  background-color: #f3ff3d;
+  background-color: rgba(243, 255, 61, 255);
 }
 /* Te - Po */
 tr:nth-child(n + 5):nth-child(-n + 6) :nth-child(16) {
@@ -62,7 +62,7 @@ tr:nth-child(n + 5):nth-child(-n + 6) :nth-child(16) {
 }
 /* N - P */
 tr:nth-child(n + 2):nth-child(-n + 3) :nth-child(15) {
-  background-color: #f3ff3d;
+  background-color: rgba(243, 255, 61, 255);
 }
 /* As -Sb */
 tr:nth-child(n + 4):nth-child(-n + 5) :nth-child(15) {
@@ -78,7 +78,7 @@ tr:nth-child(7):nth-child(7) :nth-child(15) {
 } */
 /* C */
 tr:nth-child(n + 2):nth-child(-n + 2) :nth-child(14) {
-  background-color: #f3ff3d;
+  background-color: rgba(243, 255, 61, 255);
 }
 /* Si - Ge*/
 tr:nth-child(n + 3):nth-child(-n + 4) :nth-child(14) {
@@ -98,7 +98,7 @@ tr:nth-child(n + 3):nth-child(-n + 7) :nth-child(13) {
 }
 /* Li - Fr */
 tr:nth-child(n + 2):nth-child(-n + 7) :nth-child(1) {
-  background-color: #8080b1;
+  background-color: rgba(128, 128, 177, 255);
 }
 /* Be - Ka */
 tr:nth-child(n + 2):nth-child(-n + 7) :nth-child(2) {
