--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@800&display=swap");
+
+body {
+  font-family: "Raleway", sans-serif;
+}
 table {
   width: 90vw;
   height: 90vh;
